---------------------------------------------------------------------------------------------------
Version: 0.0.14
Date: 2023-04-16
  Changes:
    - SE: Lifesupport canisters no longer require processing units
---------------------------------------------------------------------------------------------------
Version: 0.0.13
Date: 2023-04-10
  Changes:
    - Catalyzed oil recipes can now use prod modules.
  Localization:
    - zh-CN thanks to Klarkxy
---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2023-04-02
  Changes:
    - Silver brazing alloy will use foundry if enabled.
    - SE: Fix some possible tech/recipe deadlocks
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2023-03-29
  Fixes:
    - Several en locale strings added or fixed
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2023-03-28
  Fixes:
    - Correctly scale low res rich copper entity sprites
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2023-03-27
  Fixes:
    - When silver is disabled, do not enable an alternate electronic circuit recipe
    - Alternate electronic circuit recipe now unlocks at appropriate time in certain mod loadouts
    - Some fixes around platinum, palladium settings
  Changes:
    - Tweak silver wire icon
    - Tweak electronic circuit recipe icons
    - When used with Bob's electronics, provide alternate basic electronic components recipe
    - When used with AAI Industry (and not Natural Gas) provide alt-alt electronic circuit recipe
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2023-03-27
  Fixes:
    - Researching Advanced Electronics 2 unlocks now correctly unlocks CPUs in most mod loadouts.