@@ -5,10 +5,10 @@ util.remove_ingredient("processing-unit", "silicon-wafer")
 util.remove_ingredient("processing-unit", "sulfuric-acid")
 util.remove_ingredient("processing-unit", "electronic-circuit")
 util.remove_ingredient("processing-unit", "advanced-circuit")
+util.remove_ingredient("processing-unit", "rare-metals") -- k2
 util.add_ingredient("processing-unit", "cpu", 1)
-util.set_recipe_time("processing-unit", 4)
+util.set_recipe_time("processing-unit", 2)
 util.add_ingredient("processing-unit", "mainboard", 1)
-
 
 util.add_unlock("se-processing-unit-holmium", "cpu-holmium")
 util.add_unlock("se-processing-unit-holmium", "mainboard-holmium")
